--- a/css/stylus.css
+++ b/css/stylus.css
@@ -70,6 +70,7 @@ color: white;
     border-color: white;
     padding: 10px;
 }
+/*
 footer {
    position:fixed;
    left:0px;
@@ -79,3 +80,4 @@ footer {
    background:#333333;
    color: white;
 }
+*/
